--- a/pages/menu.html
+++ b/pages/menu.html
@@ -28,21 +28,21 @@
         <nav class="nav fade-in-top">
             <a href="../index.html" class="nav__link">
                 <img class="nav__link-favicon" src="../assets/favicon.png" alt="">
-                <img src="../assets/logo.png" alt="logo del negocio">
+                <img class="nav__link-img" src="../assets/logo.png" alt="logo del negocio">
             </a>
             <div class="nav__menu fade-in-top" id="nav__menu">
-                <ul class="ul ">
-                    <li class="ul__item">
-                        <a href="../index.html">Home</a>
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a class="nav__item-link" href="../index.html">Home</a>
                     </li>
-                    <li class="ul__item">
-                        <a href="./story.html">Nosotros</a>
+                    <li class="nav__item">
+                        <a class="nav__item-link" href="./story.html">Nosotros</a>
                     </li>
-                    <li class="ul__item">
-                        <a href="./menu.html">Menu</a>
+                    <li class="nav__item">
+                        <a class="nav__item-link" href="./menu.html">Menu</a>
                     </li>
-                    <li class="ul__item">
-                        <a href="./contacto.html">Contacto</a>
+                    <li class="nav__item">
+                        <a class="nav__item-link" href="./contacto.html">Contacto</a>
                     </li>
                     <button class="nav__button nav__button_hide openReservacionResp">Reservar</button>
                 </ul>
