--- a/pages/story.html
+++ b/pages/story.html
@@ -1,178 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/story.css" />
+    <title>Flippo - Resto & Bar gourmet</title>
+    <link
+      rel="shortcut icon"
+      href="../assets/favicon.png"
+      type="image/x-icon"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <meta
+      name="descripción"
+      content="Filippo: Restaurante y bar en un lugar muy agradable que ofrece almuerzos y cenas variadas de calidad gourmet. Elaboramos nuestros platos con ingredientes frescos y sanos, incluyendo opciones vegetarianas y veganas."
+    />
+    <meta
+      name="keywords"
+      content="Filippo, restaurante, bar, almuerzo, cena, gourmet, ingredientes frescos, comida saludable, comida vegetariana, comida vegana, Buenos Aires"
+    />
+    <meta property="og:title" content="Filippo - Restaurante y Bar" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://filippo.vercel.app/" />
+    <meta
+      property="og:image"
+      content="https://filippo.vercel.app/assets/images/filippo_restaurant.jpg"
+    />
+    <meta property="og:site_name" content="Filippo - Restaurante y Bar" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/main.css" />
-  <link rel="stylesheet" href="../css/header.css">
-  <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/story.css" />
-  <title>Flippo - Resto & Bar gourmet</title>
-  <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" 
-  rel="stylesheet" />
-  <meta name="descripción" content="Filippo: Restaurante y bar en un lugar muy agradable que ofrece almuerzos y cenas variadas de calidad gourmet. Elaboramos nuestros platos con ingredientes frescos y sanos, incluyendo opciones vegetarianas y veganas.">
-  <meta name="keywords" content="Filippo, restaurante, bar, almuerzo, cena, gourmet, ingredientes frescos, comida saludable, comida vegetariana, comida vegana, Buenos Aires">
-  <meta property="og:title" content="Filippo - Restaurante y Bar" />
-  <meta property="og:type" content="website"/>
-  <meta property="og:url" content="https://filippo.vercel.app/" />
-  <meta property="og:image" content="https://filippo.vercel.app/assets/images/filippo_restaurant.jpg"/>
-  <meta property="og:site_name" content="Filippo - Restaurante y Bar"/>
-</head>
-
-<body>
-
-  <!-- NAV START -->
-  <header>
-    <nav class="nav">
+  <body>
+    <!-- NAV START -->
+    <header>
+      <nav class="nav">
         <a href="../index.html" class="nav__link">
-            <img class="nav__link-favicon" src="../assets/favicon.png" alt="">
-            <img src="../assets/logo.png" alt="logo del negocio">
+          <img class="nav__link-favicon" src="../assets/favicon.png" alt="" />
+          <img src="../assets/logo.png" alt="logo del negocio" />
         </a>
         <div class="nav__menu" id="nav__menu">
-            <ul class="ul ">
-                <li class="ul__item">
-                    <a href="../index.html">Home</a>
-                </li>
-                <li class="ul__item">
-                    <a href="./story.html">Nosotros</a>
-                </li>
-                <li class="ul__item">
-                    <a href="../pages/menu.html">Menu</a>
-                </li>
-                <li class="ul__item">
-                    <a href="../pages/contacto.html">Contacto</a>
-                </li>
-                <button class="nav__button nav__button_hide">Reservar</button>
-            </ul>
+          <ul class="ul">
+            <li class="ul__item">
+              <a href="../index.html">Home</a>
+            </li>
+            <li class="ul__item">
+              <a href="./story.html">Nosotros</a>
+            </li>
+            <li class="ul__item">
+              <a href="../pages/menu.html">Menu</a>
+            </li>
+            <li class="ul__item">
+              <a href="../pages/contacto.html">Contacto</a>
+            </li>
+            <button class="nav__button nav__button_hide">Reservar</button>
+          </ul>
         </div>
         <button class="nav__button-menu"><i class="ri-menu-line"></i></button>
         <button class="nav__button">Reservar</button>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <main class="story">
-    <section class="story__hero">
-      <div class="story__content">
-        <h1>Historias de Cocina</h1>
-        <p>Así evolucionó la cocina en nuestra era</p>
-      </div>
-    </section>
-    <section class="story__news">
-      <div class="story__container story__news-grid">
-        <div class="story__news-content">
-          <h4 class="story__news-title">
-            Consulta nuestras historias de cocina
-          </h4>
-          <div class="story__news-buttons">
-            <button class="story__news-button-check">
-              Nuestras Noticias
-            </button>
-            <button class="story__news-button-hi">Saludanos</button>
-          </div>
+    <main class="story">
+      <section class="story__hero">
+        <div class="story__content">
+          <h1>Historias de Cocina</h1>
+          <p>Así evolucionó la cocina en nuestra era</p>
         </div>
-        <div class="story__description-container">
-          <p class="story__description-text">
-            En nuestro restaurante, cada plato cuenta una historia que celebra
-            nuestras raíces y la innovación culinaria. Fusionamos ingredientes
-            seleccionados y técnicas tradicionales para crear experiencias
-            gastronómicas únicas.
-          </p>
-          <p class="story__description-text">
-            Nuestros chefs, inspirados por diversas culturas, diseñan menús
-            que deleitan y unen a las personas. Cada comida es una oportunidad
-            para compartir momentos especiales y disfrutar de una experiencia
-            memorable.
-          </p>
-        </div>
-      </div>
-    </section>
-    <section class="story__team">
-      <div class="story__container">
-        <h2 class="story__main-heading">Miembros del Equipo</h2>
-        <div class="story__grid">
-          <div class="story__grid-item">
-            <img src="../assets/images/team/team01.jpg" alt="imagen equipo" class="story__team-image" />
-            <h3 class="story__team-heading">Gabriela</h3>
-            <p class="story__team-description">CEO&Fundadora</p>
+      </section>
+      <section class="story__news">
+        <div class="story__container story__news-grid">
+          <div class="story__news-content">
+            <h4 class="story__news-title">
+              Consulta nuestras historias de cocina
+            </h4>
+            <div class="story__news-buttons">
+              <button class="story__news-button-check">
+                Nuestras Noticias
+              </button>
+              <button class="story__news-button-hi">Saludanos</button>
+            </div>
           </div>
-          <div class="story__grid-item">
-            <img src="../assets/images/team/team02.jpg" alt="imagen equipo" class="story__team-image" />
-            <h3 class="story__team-heading">Diego</h3>
-            <p class="story__team-description">Administrador</p>
-          </div>
-          <div class="story__grid-item">
-            <img src="../assets/images/team/team03.jpg" alt="imagen equipo" class="story__team-image" />
-            <h3 class="story__team-heading">Luciano</h3>
-            <p class="story__team-description">Chef en Jefe</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="story__newsletter">
-      <div class="story__container">
-        <div class="story__newsletter-grid">
-          <img src="../assets/images/news/news02.jpg" alt="image newslatter" class="story__newslatter-image" />
-          <div class="story__newsletter-content">
-            <h3 class="story__newsletter-heading">Nuestro Diario</h3>
-            <p class="story__newsletter-text">
-              Noticias de comidas todos los días
+          <div class="story__description-container">
+            <p class="story__description-text">
+              En nuestro restaurante, cada plato cuenta una historia que celebra
+              nuestras raíces y la innovación culinaria. Fusionamos ingredientes
+              seleccionados y técnicas tradicionales para crear experiencias
+              gastronómicas únicas.
             </p>
-            <form action="">
-              <div class="story__newslatter-input">
-                <input type="email" class="story_newslater-email" placeholder="Tu correo" />
-                <input type="submit" value="Suscribirme" class="story__newslatter-submit" disabled id="submit" />
-              </div>
-              <div class="story__newslatter-terms">
-                <input type="checkbox" name="terms" id="terms" />
-                <label for="terms" class="story__newslatter-label">Terminos y condiciones</label>
-              </div>
-            </form>
+            <p class="story__description-text">
+              Nuestros chefs, inspirados por diversas culturas, diseñan menús
+              que deleitan y unen a las personas. Cada comida es una oportunidad
+              para compartir momentos especiales y disfrutar de una experiencia
+              memorable.
+            </p>
           </div>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
+      <section class="story__team">
+        <div class="story__container">
+          <h2 class="story__main-heading">Miembros del Equipo</h2>
+          <div class="story__grid">
+            <div class="story__grid-item">
+              <img
+                src="../assets/images/team/team01.jpg"
+                alt="imagen equipo"
+                class="story__team-image"
+              />
+              <h3 class="story__team-heading">Gabriela</h3>
+              <p class="story__team-description">CEO&Fundadora</p>
+            </div>
+            <div class="story__grid-item">
+              <img
+                src="../assets/images/team/team02.jpg"
+                alt="imagen equipo"
+                class="story__team-image"
+              />
+              <h3 class="story__team-heading">Diego</h3>
+              <p class="story__team-description">Administrador</p>
+            </div>
+            <div class="story__grid-item">
+              <img
+                src="../assets/images/team/team03.jpg"
+                alt="imagen equipo"
+                class="story__team-image"
+              />
+              <h3 class="story__team-heading">Luciano</h3>
+              <p class="story__team-description">Chef en Jefe</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="story__newsletter">
+        <div class="story__container">
+          <div class="story__newsletter-grid">
+            <img
+              src="../assets/images/news/news02.jpg"
+              alt="image newslatter"
+              class="story__newslatter-image"
+            />
+            <div class="story__newsletter-content">
+              <h3 class="story__newsletter-heading">Nuestro Diario</h3>
+              <p class="story__newsletter-text">
+                Noticias de comidas todos los días
+              </p>
+              <form action="" id="form-story">
+                <div class="story__newslatter-input">
+                  <input
+                    type="email"
+                    class="story_newslater-email"
+                    placeholder="Tu correo"
+                    id="story-email"
+                  />
+                  <input
+                    type="submit"
+                    value="Suscribirme"
+                    class="story__newslatter-submit"
+                    disabled
+                    id="submit"
+                  />
+                </div>
+                <div class="story__newslatter-terms">
+                  <input type="checkbox" name="terms" id="terms" />
+                  <label for="terms" class="story__newslatter-label"
+                    >Terminos y condiciones</label
+                  >
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <section class="footer__container">
+    <!-- FOOTER -->
+    <footer class="footer">
+      <section class="footer__container">
         <h3 class="footer__title">Filippo</h3>
         <div class="footer__content">
-            <div class="footer__info">
-                <h6 class="footer__subtitle">Ubicación</h6>
-                <p class="footer__text">Av. 9 de Julio 2444 - Buenos Aires</p>
+          <div class="footer__info">
+            <h6 class="footer__subtitle">Ubicación</h6>
+            <p class="footer__text">Av. 9 de Julio 2444 - Buenos Aires</p>
+          </div>
+          <div class="footer__info">
+            <h6 class="footer__subtitle">Horario de apertura</h6>
+            <p class="footer__text">Lunes a Viernes</p>
+            <p class="footer__text">10:00 a.m. - 20:00 p.m</p>
+            <p class="footer__text">Teléfono: 11-3422-9866</p>
+          </div>
+          <div class="footer__info">
+            <h6 class="footer__subtitle">Redes sociales</h6>
+            <div class="footer__social">
+              <div class="social__icon">
+                <i class="ri ri-instagram-line"></i>
+              </div>
+              <div class="social__icon">
+                <i class="ri ri-twitter-line"></i>
+              </div>
+              <div class="social__icon">
+                <i class="ri ri-facebook-circle-line"></i>
+              </div>
+              <div class="social__icon">
+                <i class="ri ri-youtube-line"></i>
+              </div>
             </div>
-            <div class="footer__info">
-                <h6 class="footer__subtitle">Horario de apertura</h6>
-                <p class="footer__text">Lunes a Viernes</p>
-                <p class="footer__text">10:00 a.m. - 20:00 p.m</p>
-                <p class="footer__text">Teléfono: 11-3422-9866</p>
-            </div>
-            <div class="footer__info">
-                <h6 class="footer__subtitle">Redes sociales</h6>
-                <div class="footer__social">
-                    <div class="social__icon">
-                        <i class="ri ri-instagram-line"></i>
-                    </div>
-                    <div class="social__icon">
-                        <i class="ri ri-twitter-line"></i>
-                    </div>
-                    <div class="social__icon">
-                        <i class="ri ri-facebook-circle-line"></i>
-                    </div>
-                    <div class="social__icon">
-                        <i class="ri ri-youtube-line"></i>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-        <h6 class="footer__credit">Desarrollado por Grupo 3 - Codo a Codo - 2024</h6>
-    </section>
-  </footer>
+        <h6 class="footer__credit">
+          Desarrollado por Grupo 3 - Codo a Codo - 2024
+        </h6>
+      </section>
+    </footer>
 
-  <script src="../js/main.js"></script>
-</body>
-
+    <script src="../js/main.js"></script>
+  </body>
 </html>
