--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -151,7 +151,7 @@
                   >Número de teléfono</label
                 >
                 <input
-                  type="text"
+                  type="number"
                   name="contact-phone"
                   id="contact-phone"
                   class="form-control"
@@ -265,6 +265,7 @@
 
     <!-- Script -->
     <script src="../js/main.js"></script>
+    <script src="../js/validate.js"></script>
     <script
       src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
