--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -16,7 +16,7 @@
 
                 <!-- FORM START -->
                 <div class="contact__form">
-                    <form action="#" class="custom-form">
+                    <form action="#" class="custom-form" id="reservationForm">
                         <div class="reservation__form-row">
                             <div class="reservation__form-group">
                                 <div class="reservation__form-item">
@@ -65,6 +65,8 @@
             </div>
         </section>
     </main>
+
+    <script src="../js/reserva.js"></script>
 
 </body>
 </html>
